# pytypeddict-ts

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pytypeddict-ts.cabal
.github/workflows/: haskell.yml
Py2Ts/: Conversion.hs  Print.hs  PyParse.hs  Types.hs
PyTypedDictTs/: Conversion.hs  Print.hs  PyParse.hs  Types.hs
app/: Main.hs
tests/: Py2TsSpec.hs  PyTypedDictTsSpec.hs
